[project]
name = "ComfyUI-Hive"
description = "ComfyUI-Hive/Club - Github: https://github.com/luguoli - ComfyUI-Hive is a community plugin designed for ComfyUI users, allowing you to:Real-time communication with global users, share flowworks, Browse, search quality works, workflows, nodes, models, and tutorials, Easy resource access, Built-in mirror addresses, built-in node installer and model downloader."
version = "1.0.10"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["requests", "tqdm"]

[project.urls]
Repository = "https://github.com/luguoli/ComfyUI-Hive"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/luguoli/ComfyUI-Hive/blob/main/README.md"
"Bug Tracker" = "https://github.com/luguoli/ComfyUI-Hive/issues"

[tool.comfy]
PublisherId = "luguoli"
DisplayName = "ComfyUI-Hive"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

